<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"
        android:text="@string/product_view"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp" />

    <LinearLayout style="@style/ActivityView1">

        <LinearLayout style="@style/ListItem1">

            <TextView
                style="@style/ProductViewTitleStyle"
                android:text="@string/name_of_product" />
        </LinearLayout>

        <LinearLayout style="@style/ListItem2">

            <TextView
                android:id="@+id/product_name_view_text"
                style="@style/ProductViewStyle" />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout style="@style/ListItem1">

        <LinearLayout style="@style/ListItem2">

            <TextView
                style="@style/ProductViewTitleStyle"
                android:text="@string/price_of_product" />
        </LinearLayout>

        <LinearLayout style="@style/ListItem2">

            <TextView
                android:id="@+id/product_price_view_text"
                style="@style/ProductViewStyle" />



        </LinearLayout>
    </LinearLayout>

    <LinearLayout style="@style/ActivityView1">

        <LinearLayout style="@style/ListItem2">

            <TextView
                style="@style/ProductViewTitleStyle"
                android:text="@string/quantity_of_product" />
        </LinearLayout>

        <LinearLayout style="@style/ListItem2">

            <TextView
                android:id="@+id/product_quantity_view_text"
                style="@style/ProductViewStyle" />

            <LinearLayout
                style="@style/ListItem2"
                android:paddingLeft="16dp">

                <LinearLayout style="@style/ListItem2">

                    <Button
                        android:id="@+id/increase_button"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:background="@color/colorAccent"
                        android:text="+"
                        android:textColor="#fff" />
                </LinearLayout>

                <LinearLayout style="@style/ListItem2">

                    <Button
                        android:id="@+id/decrease_button"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:background="@color/colorAccent"
                        android:text="-"
                        android:textColor="#fff" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout style="@style/ActivityView1">

        <LinearLayout style="@style/ListItem2">

            <TextView
                style="@style/ProductViewTitleStyle"
                android:text="@string/supplier_name" />
        </LinearLayout>

        <LinearLayout style="@style/ListItem2">

            <TextView
                android:id="@+id/product_supplier_name_view_text"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:paddingRight="16dp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout style="@style/ActivityView1">

        <LinearLayout style="@style/ListItem2">

            <TextView
                style="@style/ProductViewTitleStyle"
                android:text="@string/supplier_phone_number" />
        </LinearLayout>

        <LinearLayout style="@style/ListItem2">

            <LinearLayout style="@style/ActivityView1">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="3"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/product_supplier_phone_number_view_text"
                        style="@style/ProductViewStyle" />
                </LinearLayout>

                <LinearLayout style="@style/ListItem2">

                    <Button
                        android:id="@+id/phone_button"
                        android:layout_width="32dp"
                        android:layout_height="32dp"
                        android:background="@color/colorAccent"
                        android:drawableLeft="@drawable/ic_local_phone_black_24dp"
                        android:focusable="false" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        style="@style/ActivityView1"
        android:gravity="center">

        <Button
            android:id="@+id/delete_button"
            style="@style/ButtonStyle"
            android:drawableLeft="@drawable/ic_delete_black_24dp"
            android:text="Delete" />
    </LinearLayout>
</LinearLayout>